--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@types/clone-deep": "^4.0.1",
+    "bootstrap": "^4.5.3",
+    "bootstrap-vue": "^2.18.1",
+    "clone-deep": "^4.0.1",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11",
+    "vue": "^2.6.12",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^8.4.2",
     "vue-router": "^3.2.0",
